# DispaTech-GUI

./: CMakeLists.txt  encryption_key.pub  gtk.supp  main.cpp  main.h  private_key.pem  public_key.pem
default/: configuration.json  encryption_key  settings.ini
src/: application_controller.cpp  configuration_controller.cpp  controller.cpp  file_manager.cpp  request_controller.cpp  rsa_controller.cpp  websocket_controller.cpp
src/header/: application_controller.h  configuration_controller.h  controller.h  file_manager.h  http_codes.h  request_controller.h  rsa_controller.h  settings.h  websocket_controller.h
